[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network Interfaces. Messaging and Types."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_interface"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.22.4"

[features]
test-utils = ["proptest"]

[dependencies]
bincode = "1.3.1"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
crdts = { version = "7.2", default-features = false, features = ["merkle"] }
custom_debug = "~0.5.0"
ed25519 = { version = "1.2.0", features = ["serde_bytes"] }
ed25519-dalek = { version = "1.0.0", features = ["serde"] }
eyre = "~0.6.5"
hex = "0.4.3"
hex_fmt = "~0.3.0"
itertools = "~0.10.0"
lazy_static = "1"
multibase = "~0.9.1"
num_cpus = "1.13.0"
priority-queue = { version = "1.3.1" }
proptest = { version = "1.0.0", optional = true }
rand = "~0.8.5"
rand-07 = { package = "rand", version = "0.7.3" }                                    # required till ed25519-dalek upgrades to rand v0.8
rayon = "1.5.1"
rmp-serde = "1.0.0"
self_encryption = "~0.28.0"
serde = { version = "1.0.111", features = ["derive", "rc"] }
serde_bytes = "~0.11.5"
serde_json = "1.0.53"
signature = "1.1.10"
sn_consensus = "3.3.3"
sn_dbc = { version = "12.0.0", features = ["serdes"] }
sn_sdkg = "3.1.3"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2.0"
thiserror = "1.0.23"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tracing = "~0.1.26"
tracing-core = "~0.1.21"
tracing-subscriber = { version = "0.3.1", features = ["json"] }
uluru = "3.0.0"
xor_name = "~5.0.0"

[dependencies.tokio]
version = "^1.19"
features = ["fs", "io-util", "macros", "time", "rt", "rt-multi-thread", "sync"]

[dev-dependencies]
assert_matches = "1.3"
proptest = { version = "1.0.0" }
rand = { version = "~0.8.5", features = ["small_rng"] }
rand_xorshift = "~0.2.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false                                           # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
